fix: github workflow error

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,10 +19,10 @@ jobs:
       - run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          - git remote set-url origin git@gitlab.innotechx.com:$CI_PROJECT_PATH.git
-          - git checkout $CI_COMMIT_REF_NAME
-          - git reset --hard origin/$CI_COMMIT_REF_NAME
-          - SPACE_CHAR=" "
-          - npx standard-version --releaseCommitMessageFormat "chore(release):${SPACE_CHAR}{{currentTag}} [skip ci]"
-          - git push --follow-tags origin $CI_COMMIT_REF_NAME
-          - npm publish
+          git remote set-url origin git@gitlab.innotechx.com:$CI_PROJECT_PATH.git
+          git checkout $CI_COMMIT_REF_NAME
+          git reset --hard origin/$CI_COMMIT_REF_NAME
+          SPACE_CHAR=" "
+          npx standard-version --releaseCommitMessageFormat "chore(release):${SPACE_CHAR}{{currentTag}} [skip ci]"
+          git push --follow-tags origin $CI_COMMIT_REF_NAME
+          npm publish
