--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/pawgame/game-library/issues"
   },
-  "homepage": "https://github.com/pawgame/game-library#readme"
+  "homepage": "https://github.com/pawgame/game-library#readme",
+  "devDependencies": {
+    "del-cli": "^3.0.1",
+    "typescript": "^3.9.7"
+  }
 }
