--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -28,6 +28,6 @@ jobs:
           SPACE_CHAR=" "
           npx standard-version --releaseCommitMessageFormat "chore(release):${SPACE_CHAR}{{currentTag}} [skip ci]"
           git push --follow-tags origin $CI_COMMIT_REF_NAME
-          npm publish --access publis
+          npm publish --access public
         env:
             NODE_AUTH_TOKEN: ${{secrets.NPM_NODE_AUTH_TOKEN}}
