feat: add eslint & prettier

--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
   },
   "homepage": "https://github.com/pawgame/game-library#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
     "del-cli": "^3.0.1",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-typescript": "^11.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "prettier": "^2.1.2",
     "typescript": "^3.9.7"
   }
 }
