--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lib/"
   ],
   "scripts": {
-    "clean": "del-cli lib",
-    "build": "npm run clean && npm run compile",
-    "compile": "tsc --outDir lib -d",
+    "build": "gulp",
     "test": "echo \"no test specified\"",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx"
   },
@@ -27,11 +25,14 @@
   "homepage": "https://github.com/pawgame/game-library#readme",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "del-cli": "^3.0.1",
+    "del": "^6.0.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-typescript": "^11.0.0",
     "eslint-plugin-import": "^2.22.1",
+    "gulp": "^4.0.2",
     "prettier": "^2.1.2",
+    "rollup": "^2.29.0",
+    "rollup-plugin-typescript2": "^0.27.3",
     "typescript": "^3.9.7"
   }
 }
