--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es6",
     "skipLibCheck": true,
     "lib": ["dom", "dom.iterable", "esnext"],
+    "declaration": true
   },
   "include": ["src", "libs"]
 }
