--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "rollup": "^2.29.0",
     "rollup-plugin-typescript2": "^0.27.3",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@shm-open/utilities": "^1.2.2"
   }
 }
